--- a/user_account_management/user_account_management.vcxproj.filters
+++ b/user_account_management/user_account_management.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="watcher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="account.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="watcher.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
