Added a scratchpad for code snippets I'm exploring or considering integrating. Will be removed from final product.

--- a/user_account_management/user_account_management.vcxproj
+++ b/user_account_management/user_account_management.vcxproj
@@ -147,6 +147,9 @@
     <ClInclude Include="account.hpp" />
     <ClInclude Include="watcher.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="scratchPad.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
